# caffeine-services

./: CMakeLists.txt  CMakePresets.json  README.md  SKILL.md
.github/workflows/: ci.yml  deploy.yml
cmake/: caffeine-servicesConfig.cmake.in
include/: cfn_sal.h  cfn_sal_device.h  cfn_sal_types.h  cfn_svc.h  cfn_svc_types.h
include/devices/: cfn_sal_accel.h  cfn_sal_analog_sensor.h  cfn_sal_battery.h  cfn_sal_button.h  cfn_sal_color_sensor.h  cfn_sal_composite.h  cfn_sal_dev_accelerometer.h  cfn_sal_dev_ambient_light.h  cfn_sal_dev_battery.h  cfn_sal_dev_button.h  cfn_sal_dev_color.h  cfn_sal_dev_composite.h  cfn_sal_dev_display.h  cfn_sal_dev_gnss.h  cfn_sal_dev_gpio_expander.h  cfn_sal_dev_gsm.h  cfn_sal_dev_gyroscope.h  cfn_sal_dev_humidity.h  cfn_sal_dev_led.h  cfn_sal_dev_magnetometer.h  cfn_sal_dev_pressure.h  cfn_sal_dev_proximity.h  cfn_sal_dev_temperature.h  cfn_sal_display.h  cfn_sal_gnss.h  cfn_sal_gsm.h  cfn_sal_gyro_sensor.h  cfn_sal_hum_sensor.h  cfn_sal_led.h  cfn_sal_light_sensor.h  cfn_sal_mag_sensor.h  cfn_sal_pressure_sensor.h  cfn_sal_prox_sensor.h  cfn_sal_temp_sensor.h  cfn_svc_accel.h  cfn_svc_battery.h  cfn_svc_button.h  cfn_svc_display.h  cfn_svc_gnss.h  cfn_svc_gsm.h  (+5 more)
include/network/: cfn_sal_connection.h  cfn_sal_nwk_connection.h  cfn_sal_nwk_transport.h  cfn_sal_transport.h  cfn_svc_connection.h  cfn_svc_transport.h
include/software/: cfn_svc_at_parser.h  cfn_svc_cli.h
include/utilities/: cfn_sal_at_parser.h  cfn_sal_cli.h  cfn_sal_collection.h  cfn_sal_fs.h  cfn_sal_kv.h  cfn_sal_logging.h  cfn_sal_serialization.h  cfn_sal_timekeeping.h  cfn_sal_utl_at_parser.h  cfn_sal_utl_cli.h  cfn_sal_utl_collection.h  cfn_sal_utl_fs.h  cfn_sal_utl_kv.h  cfn_sal_utl_logging.h  cfn_sal_utl_serialization.h  cfn_sal_utl_timekeeping.h  cfn_svc_at_parser.h  cfn_svc_cli.h  cfn_svc_collection.h  cfn_svc_fs.h  cfn_svc_logging.h  cfn_svc_serialization.h
include/utils/: cfn_svc_collection.h
tests/: CMakeLists.txt  cfn_sal_test_collection.cpp  cfn_sal_test_devices.cpp  cfn_sal_test_foundation.cpp  cfn_svc_test_advanced.cpp  cfn_svc_test_collection.cpp  cfn_svc_test_devices.cpp  cfn_svc_test_foundation.cpp  compliance.c
